# balancing_robot_m4

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  makefile
common/: CMakeLists.txt
common/app/inc/: a7_communicator.hpp  balancing_robot.hpp  imu_poller.hpp  init.hpp  pid.hpp  run_led.hpp  simple_low_pass.hpp
common/app/src/: a7_communicator.cpp  balancing_robot.cpp  imu_poller.cpp  init.cpp  main.cpp  pid.cpp  run_led.cpp  simple_low_pass.cpp
common/interface/inc/: controller.hpp  drivers.hpp  estimator.hpp  gpio.hpp  imu.hpp  motor.hpp  uart.hpp
common/rtos/inc/: freertos_hooks.hpp  task.hpp
common/rtos/src/: freertos_hooks.cpp
platform/posix/: CMakeLists.txt
platform/posix/config/: FreeRTOSConfig.h
platform/posix/driver/inc/: gpio_driver.hpp  imu_driver.hpp  init.hpp  motor_driver.hpp  stdio_driver.hpp
platform/posix/driver/src/: gpio_driver.cpp  imu_driver.cpp  init.cpp  motor_driver.cpp  stdio_driver.cpp
platform/stm32mp1/: CMakeLists.txt
platform/stm32mp1/cmake/: gcc-arm-none-eabi.cmake
platform/stm32mp1/cmake/stm32mp1_hal/: CMakeLists.txt
platform/stm32mp1/config/: FreeRTOSConfig.h
platform/stm32mp1/driver/inc/: bsp.hpp  gpio_driver.hpp  init.hpp  motor_driver.hpp  mpu6050_driver.hpp  pwm_driver.hpp  uart_module.hpp  virtual_uart_driver.hpp
platform/stm32mp1/driver/src/: bsp.cpp  gpio_driver.cpp  init.cpp  motor_driver.cpp  mpu6050_driver.cpp  pwm_driver.cpp  uart_module.cpp  virtual_uart_driver.cpp
platform/stm32mp1/openocd/: balancing_robot_openocd.cfg  gdb_helper.tcl  mem_helper.tcl
platform/stm32mp1/openocd/interface/: stlink-dap.cfg
scripts/: flash  format  setup_vscode
